# Ripple

./: .gitignore  dumbdb.adb  dumbdb.sdb  ripple.adb  ripple.sdb  testdb.py
package/: README.md  pyproject.toml  setup.cfg
package/ripple/core/: meta.py  persistance.py
package/ripple/extra/: compression.py
ripple/: ripple.py
ripple/core/: const.py  data_flow.py  db.py  db_init.py  persist_const.py  persistance.py  ripple.py  transaction.py
