[metadata]
name = rippledb
version = 0.0.1
author = Cambur Dumitru
author_email = dcambur@gmail.com
description = This project is a simplified in-memory database inspired by redis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dcambur/Ripple
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True